--- a/src-android/MailIM/app/src/main/res/layout/activity_login.xml
+++ b/src-android/MailIM/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="20dp"
                 android:layout_centerVertical="true"
-                android:text="账户："/>
+                android:text="邮箱："/>
             <EditText
                 android:id="@+id/login_et_username"
                 android:layout_width="match_parent"
@@ -109,15 +109,15 @@
             android:background="#3C8DC4"
             android:text="登录"
             android:textColor="#ffffff"/>
-        <TextView
-            android:id="@+id/login_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="right"
-            android:clickable="true"
-            android:textColor="#00d"
-            android:text="还没注册？点击注册"
-            android:focusable="true" />
+        <!--<TextView-->
+            <!--android:id="@+id/login_register"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:layout_gravity="right"-->
+            <!--android:clickable="true"-->
+            <!--android:textColor="#00d"-->
+            <!--android:text="还没注册？点击注册"-->
+            <!--android:focusable="true" />-->
     </LinearLayout>
 </RelativeLayout>
