--- a/src-android/MailIM/app/src/main/res/layout/list_item_chat.xml
+++ b/src-android/MailIM/app/src/main/res/layout/list_item_chat.xml
@@ -41,8 +41,8 @@
 
         <ImageView
             android:id="@+id/image_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginStart="5dp"
             android:layout_alignTop="@+id/img_chat_left"
             android:layout_toEndOf="@+id/img_chat_left"
@@ -86,8 +86,8 @@
 
         <ImageView
             android:id="@+id/image_right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginEnd="5dp"
             android:background="@color/text_bg"
             android:textSize="28sp"
