--- a/src-android/MailIM/app/src/main/res/values/colors.xml
+++ b/src-android/MailIM/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="tab_menu_bg_selected">#FFC4C4C4</color>
     <color name="tab_menu_bg_unselected">#eeeeee</color>
     <color name="account_line">#aaaaaa</color>
-    <color name="option">#eeeeee</color>
+    <color name="option">#ffffff</color>
     <color name="option_focused">#cccccc</color>
     <color name="option_pressed">#aaaaaa</color>
     <color name="title">#222222</color>
