--- a/src-android/MailIM/app/src/main/res/values/styles.xml
+++ b/src-android/MailIM/app/src/main/res/values/styles.xml
@@ -86,7 +86,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:layout_centerVertical">true</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:drawablePadding">12dp</item>
+        <!--<item name="android:textSize">20sp</item>-->
         <item name="android:textColor">#000</item>
         <item name="android:layout_marginLeft">16dp</item>
     </style>
@@ -110,7 +111,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:textSize">20sp</item>
+        <!--<item name="android:textSize">20sp</item>-->
         <item name="android:textColor">#000</item>
         <item name="android:layout_marginLeft">16dp</item>
     </style>
